Input box sizing fix
Fixed problem of input value boxes being too big in the cart page. I
set the rule on the 'cart-dropdown' class overriding max and min width
set on 'form-control'

--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -65,15 +65,16 @@ margin-bottom: 50px;
 .cart-row {
   margin: 0 80px 0 80px;
 }
-.cart-dropdown {
-  max-width: 100px;
-}
 .update-button {
   margin: 0;
 }
 .form-control {
   cursor: pointer;
   min-width: 220px;
+}
+.cart-dropdown {
+  max-width: 100px;
+  min-width: 100px;
 }
 h1 {
   margin: 0 40px 0 40px;
